--- a/weewx.conf
+++ b/weewx.conf
@@ -2,6 +2,7 @@
 #
 # Copyright (c) 2009-2024 Tom Keffer <tkeffer@gmail.com>
 # See the file LICENSE.txt for your rights.
+# RT - Copied from running version in docker
 
 ##############################################################################
 
@@ -39,7 +40,7 @@ version = 5.1.0
 
     # Set to type of station hardware. There must be a corresponding stanza
     # in this file, which includes a value for the 'driver' option.
-    station_type = Simulator
+    station_type = GW1000
 
     # If you have a website, you may specify an URL. The URL is required if you
     # intend to register your station. The URL must include the scheme, for
@@ -54,6 +55,18 @@ version = 5.1.0
     week_start = 6
 
 ##############################################################################
+
+[GW1000]
+    # This section is for the Ecowitt Gateway driver.
+
+    # How often to poll the API, default is every 20 seconds:
+    poll_interval = 20
+
+    # The driver to use:
+    driver = user.gw1000
+    ip_address = 10.2.60.20
+    port = 45000
+
 
 [Simulator]
     # This section is for the weewx weather station simulator.
@@ -609,9 +622,11 @@ version = 5.1.0
         process_services = weewx.engine.StdConvert, weewx.engine.StdCalibrate, weewx.engine.StdQC, weewx.wxservices.StdWXCalculate
         xtype_services = weewx.wxxtypes.StdWXXTypes, weewx.wxxtypes.StdPressureCooker, weewx.wxxtypes.StdRainRater, weewx.wxxtypes.StdDelta
         archive_services = weewx.engine.StdArchive
-        restful_services = weewx.restx.StdStationRegistry, weewx.restx.StdWunderground, weewx.restx.StdPWSweather, weewx.restx.StdCWOP, weewx.restx.StdWOW, weewx.restx.StdAWEKAS, user
-.mqtt.MQTT
+        restful_services = weewx.restx.StdStationRegistry, weewx.restx.StdWunderground, weewx.restx.StdPWSweather, weewx.restx.StdCWOP, weewx.restx.StdWOW, weewx.restx.StdAWEKAS
         report_services = weewx.engine.StdPrint, weewx.engine.StdReport
+
+# Removed user.mqtt.MQTT from end of restful services to make this work!
+
 #-----------------------
 [Logging]
     version = 1
@@ -642,10 +657,3 @@ version = 5.1.0
             format = %(asctime)s  {process_name}[%(process)d] %(levelname)s %(name)s: %(message)s
             # Format to use for dates and times:
             datefmt = %Y-%m-%d %H:%M:%S
-
-
-
-
-
-
-
