Amended Docker file to install six

--- a/weewx.conf
+++ b/weewx.conf
@@ -9,7 +9,7 @@
 # This section is for general configuration information.
 
 # Set to 1 for extra debug info, otherwise comment it out or set to zero.
-debug = 0
+debug = 1
 
 # Whether to log successful operations. May get overridden below.
 log_success = True
@@ -41,6 +41,8 @@ version = 5.1.0
     # Set to type of station hardware. There must be a corresponding stanza
     # in this file, which includes a value for the 'driver' option.
     station_type = GW1000
+#    station_type = Simulator
+
 
     # If you have a website, you may specify an URL. The URL is required if you
     # intend to register your station. The URL must include the scheme, for
