--- a/weewx.conf
+++ b/weewx.conf
@@ -9,7 +9,7 @@
 # This section is for general configuration information.
 
 # Set to 1 for extra debug info, otherwise comment it out or set to zero.
-debug = 1
+debug = 0
 
 # Whether to log successful operations. May get overridden below.
 log_success = True
@@ -209,8 +209,9 @@ version = 5.1.0
 
     [[StandardReport]]
         # This is the old "Standard" skin. By default, it is not enabled.
-        skin = Standard
-        enable = false
+        skin = neowx-material
+        HTML_ROOT = public_html/neo
+        enable = true
 
     [[Belchertown]]
         skin = Belchertown
@@ -659,3 +660,4 @@ version = 5.1.0
             format = %(asctime)s  {process_name}[%(process)d] %(levelname)s %(name)s: %(message)s
             # Format to use for dates and times:
             datefmt = %Y-%m-%d %H:%M:%S
+
